--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 /* ✅ 모달은 화면 전체를 꽉 채우게 x */
 .modal{
   position: fixed;
-  padding-bottom: 0; /* 중요 */
+  padding-bottom: 50px; /* 중요 */
   margin-bottom: 0;
   inset: 0;
   
@@ -217,8 +217,8 @@
       border:1px solid var(--line);
       border-radius:20px 20px 0 0;
       padding:16px;
-      padding-bottom: 60px;
-    }
+      }
+    
     .sheet h3{margin:0 0 12px}
     .row{display:flex; flex-direction:column; gap:6px; margin-bottom:10px}
     input,select{
