--- a/index.html
+++ b/index.html
@@ -216,9 +216,18 @@
       background:var(--panel);
       border:1px solid var(--line);
       border-radius:20px 20px 0 0;
-      padding:16px;
-      padding-bottom: 60px;
+      padding:0;
+      left:0;
+      right:0;
+      bottom:0;
+      margin:0;
       }
+
+    .sheet-inner{
+      padding: 16px 16px 50px;
+    }
+
+
     
     .sheet h3{margin:0 0 12px}
     .row{display:flex; flex-direction:column; gap:6px; margin-bottom:10px}
@@ -235,6 +244,7 @@
       display: flex;
       gap: 12px;        /* 지출/수입 gap이 10이면 10~12 */
       margin-top: 12px;
+      padding-bottom: 24px;
     }
     .actions button{
       flex: 1;
@@ -1472,6 +1482,7 @@ body.edit-mode .delete-btn{
   <button class="fab" id="fab" type="button"><span>+</span></button>
   <div class="modal hidden" id="modal">
   <div class="sheet">
+    <div class="sheet-inner"> <!-- 내용 전용 -->
     <div class="row">
         <div class="segmented" id="typeSegment" role="group" aria-label="지출 수입 선택">
           <button type="button" class="seg-btn active" data-value="expense">지출</button>
@@ -1519,6 +1530,7 @@ body.edit-mode .delete-btn{
       <button class="action-btn" id="save">저장</button>
       <button class="action-btn" id="close">닫기</button>
     </div>
+  </div>
   </div>
 </div>
  
