--- a/index.html
+++ b/index.html
@@ -199,8 +199,10 @@
   position: fixed;
   padding-bottom: 0; /* 중요 */
   margin-bottom: 0;
+  inset: 0;
   
   display: flex;
+  background: rgba(0,0,0,.35); /* 배경 없으면 '안 뜬 것 같은' 착시 생김 */
   align-items: flex-end;
   justify-content: stretch;
   z-index: 9999;
@@ -219,11 +221,17 @@
       right:0;
       bottom:0;
       margin:0;
+      overflow: hidden;
+      max-height: min(85vh, 690px);
+      display: flex;
+      flex-direction: column;
+    
       }
 
     .sheet-inner{
       padding: 16px 16px 56px;
-  
+      overflow: auto;
+      -webkit-overflow-scrolling: touch; /* iOS 스크롤 부드럽게 */
     }
 
 
