--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
   inset: 0;
   
   display: flex;
-  background: rgba(0,0,0,.35); /* 배경 없으면 '안 뜬 것 같은' 착시 생김 */
+  background: var(--panel);
   align-items: flex-end;
   justify-content: stretch;
   z-index: 9999;
