--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1, viewport-fit=cover" />
   <meta name="theme-color" content="#0b0b0f" />
+
+  <link rel="apple-touch-icon" href="iphoneicon180.png">
+  <meta name="apple-mobile-web-app-title" content="가계부">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <link rel="icon" href="IMG_0276.ico">
+  
   <title>낑갱 가계부</title>
   <style>
     :root{
